# bimascode

./: .gitignore  BIM_AS_CODE_MAIN_FEATURE_LIST.md  BIM_AS_CODE_RESEARCH_BRIEF.md  CLAUDE.md  HANDOFF_NOTES.md  PLANNING_SUMMARY.md  README.md  SPRINT1_FINAL_HANDOFF.md  SPRINT6_HANDOFF.md  VISUALIZATION_GUIDE.md  analyze_bonsai_ifc.py  bonsai_comparison.md  pyproject.toml  test_viewer.py  verify_new_setup.py
dev/: ELEVATION_DOOR_ISSUE.md  IMPLEMENTATION_SUMMARY.md  LINE_WEIGHTS.md  build123d_behavior.md
dev/archive/: IMPLEMENTATION_PLAN.md  SPRINT1_HANDOFF.md  SPRINT3_HANDOFF.md  SPRINT4_HANDOFF.md  SPRINT5_HANDOFF.md
docs/: WORLD_GEOMETRY_HANDOFF.md  bimascode.html  index.html  search.js
docs/archive/: EPOCH_SPRINT_PLAN.md  SPRINT3_IMPLEMENTATION_PLAN.md
docs/viewer_debug/: building.glb
examples/: basic_building.py  building_demo.ipynb  check_viewer_connection.py  example_hospital_wing.py  example_office_building.py  example_residential_home.py  example_school_building.py  grid_example.py  ifc_import_export_example.py  materials_example.py  office_world_geometry_demo.py  preview_demo.py  quick_viz.py  scale_behavior_demo.py  school_floor_plan.py  school_views_demo.py  simple_test.py  sprint1_complete_demo.py  sprint2_complete_demo.py  sprint2_ifc_export.py  sprint3_demo.py  sprint4_demo.py  sprint6_demo.py  verify_grids.py  view_online.py  view_range_demo.py  view_sprint2_direct.py  view_sprint2_ifc.py  viewer_setup.py  visualize_building.py
src/bimascode/: __init__.py
src/bimascode/architecture/: __init__.py  ceiling.py  ceiling_type.py  door.py  door_type.py  floor.py  floor_type.py  opening.py  roof.py  wall.py  wall_joins.py  wall_type.py  window.py  window_type.py
src/bimascode/core/: __init__.py  element.py  type_instance.py  world_geometry.py
src/bimascode/drawing/: __init__.py  dxf_exporter.py  elevation_view.py  floor_plan_view.py  hatch_patterns.py  hlr_processor.py  line_styles.py  pdf_exporter.py  primitives.py  protocols.py  scale_helpers.py  section_cutter.py  section_view.py  sheet.py  sheet_sizes.py  symbology.py  tags.py  title_block.py  view_base.py  view_templates.py  viewport.py
src/bimascode/export/: __init__.py  gltf_exporter.py  ifc_exporter.py  ifc_geometry.py  ifc_importer.py
src/bimascode/performance/: __init__.py  bounding_box.py  representation_cache.py  spatial_index.py
src/bimascode/server/: __init__.py  cli.py  debug_renderer.py  dxf_reader.py  file_watcher.py  preview_server.py
src/bimascode/server/viewer/: index.html  renderer2d.js  renderer3d.js  styles.css  viewer.js
src/bimascode/spatial/: __init__.py  building.py  grid.py  level.py  room.py  room_separator.py
src/bimascode/structure/: __init__.py  beam.py  beam_type.py  column.py  column_type.py  profile.py
src/bimascode/utils/: __init__.py  materials.py  units.py
tests/: test_beams.py  test_bounding_box.py  test_building.py  test_ceilings.py  test_columns.py  test_doors.py  test_drawing_primitives.py  test_floor_plan_view.py  test_floors_roofs.py  test_gltf_exporter.py  test_grids.py  test_hatch_patterns.py  test_line_styles.py  test_materials.py  test_openings.py  test_pdf_export.py  test_performance.py  test_preview_server.py  test_representation_cache.py  test_room_separator.py  test_rooms.py  test_scale_behavior.py  test_section_symbol.py  test_serialization.py  test_sheet.py  test_spatial_index.py  test_structural_flags.py  test_symbology.py  test_tags.py  test_type_instance.py  test_units.py  test_view_base.py  test_view_templates.py  test_wall_joins.py  test_walls.py  test_windows.py  test_world_geometry.py
