[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bimascode"
version = "0.1.0"
description = "BIM as Code - A Python library for programmatic Building Information Modeling"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Benny Friedman", email = "benny@example.com"}
]
keywords = ["BIM", "CAD", "IFC", "Architecture", "AEC", "Building Information Modeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Architecture",
]

dependencies = [
    "build123d>=0.6.0",
    "ifcopenshell>=0.7.0",
    "ezdxf>=1.1.0",
    "shapely>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
viz = [
    "ocp-vscode>=2.0.0",  # OCP CAD Viewer for VS Code
]
server = [
    "trimesh>=4.0.0",  # glTF export and mesh processing
    "watchdog>=3.0.0",  # File system watching for live preview
    "websockets>=12.0",  # WebSocket server for live updates
]

[project.scripts]
bimascode = "bimascode.server.cli:main"

[project.urls]
Homepage = "https://github.com/benjaminwfriedman/bimascode"
Documentation = "https://github.com/benjaminwfriedman/bimascode/docs"
Repository = "https://github.com/benjaminwfriedman/bimascode"
Issues = "https://github.com/benjaminwfriedman/bimascode/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=bimascode --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B024",  # abstract base class without abstract methods (we use ABC for type checking)
    "C901",  # too complex (we'll handle complexity case by case)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"*/drawing/hlr_processor.py" = ["F401"]  # Imports used for availability checking
"*/drawing/section_cutter.py" = ["F401"]  # Imports used for availability checking
"*/drawing/primitives.py" = ["UP007"]  # Union type alias for backward compatibility
"*/drawing/protocols.py" = ["UP007"]  # Union type alias for backward compatibility
"*/export/ifc_exporter.py" = ["B904"]  # Re-raising ImportError without from clause
"*/export/ifc_importer.py" = ["B904"]  # Re-raising ImportError without from clause
"*/export/gltf_exporter.py" = ["B904"]  # Re-raising ImportError without from clause
"*/spatial/building.py" = ["B904"]  # Re-raising ImportError without from clause
"*/spatial/grid.py" = ["B905"]  # zip without strict parameter (Python 3.10 compat)
"*/server/file_watcher.py" = ["B904"]  # Re-raising ImportError without from clause
"*/server/preview_server.py" = ["B904"]  # Re-raising ImportError without from clause

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
